--- a/dados.css
+++ b/dados.css
@@ -6,15 +6,19 @@ body {
 
 main {
     margin: auto;
+    padding-bottom: 10px;
     background-color: rgb(243, 243, 243);
     width: 90vw;
-    height: 90vh;
     text-align: center;
     border-radius: 15px;
 }
 
 main > h1 {
+    margin: auto;
     padding-top: 30px;
+}
+main > h2 {
+    margin: auto;
 }
 
 main > div {
@@ -29,7 +33,7 @@ main > div {
 
 main > div > p {
     margin: auto;
-    margin-top: 5px; 
+    margin-top: 0px; 
     padding-left: 4px;
     text-align: start;
     
@@ -42,6 +46,7 @@ main > div > .classificacao {
 }
 
 main > button {
+    margin: auto;
     font-weight: bold;
 }
 
